[gd_scene load_steps=4 format=2]

[ext_resource path="res://people_final_back.png" type="Texture" id=1]
[ext_resource path="res://People/People.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 24.0208

[node name="People" type="KinematicBody2D"]
position = Vector2( -80, 512 )
collision_layer = 0
collision_mask = 0
script = ExtResource( 2 )
min_speed = 50
max_speed = 100

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -4.00003 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2, -4.99997 )
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="StartTimer" type="Timer" parent="."]
one_shot = true

[node name="StopTimer" type="Timer" parent="."]
one_shot = true

[node name="Tween" type="Tween" parent="."]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="timeout" from="StopTimer" to="." method="_on_StopTimer_timeout"]
